classDiagram
    class Pet {
        +String name
        +String species
        +String breed
        +int age
        +String foodType
        +String medication
        +int energyLevel
        +List~String~ careNeeds
        +addCareNeed(need: String) void
        +getPetSummary() String
    }

    class Owner {
        +String name
        +Time startTime
        +Time endTime
        +availableMinutes() int
        +Map~String, String~ preferences
        +List~Pet~ pets
        +addPet(pet: Pet) void
        +updatePreferences(prefs: Map) void
        +getAvailableTime() int
    }

    class Task {
        +String taskName
        +String taskType
        +int durationMinutes
        +String priority
        +Pet pet
        +Time preferredTime
        +String recurrence
        +Date dueDate
        +boolean completed
        +String notes
        +markComplete() void
        +updateTask(field: String, value: Any) void
        -_spawn_next() Task
        +getTaskSummary() String
    }

    class Scheduler {
        +List~Task~ tasks
        +int timeAvailable
        +Time startTime
        +List~Task~ dailyPlan
        +List~Task~ unscheduledTasks
        +addTask(task: Task) void
        +editTask(task: Task) void
        +generatePlan() List~Task~
        +sortTasksByPriority() List~Task~
        +sort_by_time(tasks: List~Task~) List~Task~
        +filterTasks(completed: bool, petName: String) List~Task~
        +completeTask(task: Task) Task
        +detectConflicts() List~Task~
        +getConflictWarnings() List~String~
        +explainPlan() String
    }

    Owner "1" --> "0..*" Pet : owns
    Owner "1" --> "1" Scheduler : uses
    Scheduler "1" --> "0..*" Task : manages
    Task "1" --> "1" Pet : assignedTo
